api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.prod.yml convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/ehmrs-default: "true"
    io.kompose.service: api
  name: api
spec:
  containers:
    - args:
        - npm
        - run
        - start
      image: ehrmscontainerregistry.azurecr.io/api
      name: api
      ports:
        - containerPort: 4050
      resources: {}
      volumeMounts:
        - mountPath: /app
          name: share-data
  restartPolicy: OnFailure
  volumes:
    - name: share-data
      persistentVolumeClaim:
        claimName: share-data
status: {}
