api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.prod.yml convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "4050"
      port: 4050
      targetPort: 4050
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
